--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Deploy to Amazon ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ecs-task-def.json
+          task-definition: product-task-def.json
           service: product-service
-          cluster: product-cluster
+          cluster: ecommerce-cluster
           wait-for-service-stability: true
