--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -17,8 +17,14 @@ jobs:
       # Step 2: Log in to Amazon ECR
       - name: Log in to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
-        with:
-          mask-password: true # Suppress the "password not masked" warning
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      # Debug Step: Print AWS_REGION
+      - name: Debug AWS_REGION
+        run: echo "AWS_REGION=${{ secrets.AWS_REGION }}"
 
       # Step 3: Build and push Docker image to ECR
       - name: Build and push Docker image
