--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -70,3 +70,15 @@ jobs:
           service: product-service
           cluster: ecommerce-cluster
           wait-for-service-stability: true
+
+      # Step 7: Force ECS Service Update
+      - name: Force ECS Service Update
+        run: |
+          aws ecs update-service \
+            --cluster ecommerce-cluster \
+            --service product-service \
+            --force-new-deployment
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
