--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -12,10 +12,14 @@ jobs:
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
+        run: |
+          echo "Step 1: Checking out the code..."
         uses: actions/checkout@v3
 
       # Step 2: Set up Java
       - name: Set up JDK 17
+        run: |
+          echo "Step 2: Setting up Java JDK 17..."
         uses: actions/setup-java@v3
         with:
           java-version: "17"
@@ -23,10 +27,14 @@ jobs:
 
       # Step 3: Build with Maven
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: |
+          echo "Step 3: Building the application with Maven..."
+          mvn clean package -DskipTests
 
       # Step 4: Log in to Amazon ECR
       - name: Log in to Amazon ECR
+        run: |
+          echo "Step 4: Logging in to Amazon ECR..."
         uses: aws-actions/amazon-ecr-login@v1
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -38,6 +46,7 @@ jobs:
       # Step 5: Build and push Docker image to ECR
       - name: Build and push Docker image
         run: |
+          echo "Step 5: Building and pushing the Docker image..."
           # Define variables
           IMAGE_NAME=ecommerce/product
           ECR_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$IMAGE_NAME
@@ -57,15 +66,22 @@ jobs:
           docker push $ECR_URI:$IMAGE_TAG
           docker push $ECR_URI:latest
 
-          # Update the task definition with the new image
+          # Update the task definition with the new image by replacing the placeholder "<IMAGE>" 
+          # with the actual image URI
+
+          echo "Updating the ECS task definition with the new image..."
           sed -i "s|<IMAGE>|$ECR_URI:$IMAGE_TAG|g" product-task-def.json
 
       # Step 6: Debug Task Definition
       - name: Debug Task Definition
-        run: cat product-task-def.json
+        run: |
+          echo "Step 6: Debugging the updated task definition..."
+          cat product-task-def.json
 
       # Step 7: Deploy to ECS
       - name: Deploy to Amazon ECS
+        run: |
+          echo "Step 7: Deploying the updated task definition to Amazon ECS..."
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -80,6 +96,7 @@ jobs:
       # Step 8: Force ECS Service Update
       - name: Force ECS Service Update
         run: |
+          echo "Step 8: Forcing ECS service update to use the latest task definition..."
           aws ecs update-service \
             --cluster ecommerce-cluster \
             --service product-service \
