--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,58 @@ spring:
   application:
     name: product
 
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      add-mappings: false
+
+  datasource:
+    url: jdbc:postgresql://postgres:5432/product_db
+    username: postgres
+    password: admin@123
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  redis:
+    host: redis # Use the environment variable or default to 'redis
+    port: 6379 # Use the environment variable or default to 6379
+    timeout: 30000 # 30 seconds
+  cache:
+    type: redis
+    redis:
+      time-to-live: 3600000ms # 1 hour in milliseconds
+
+  rabbitmq:
+    host: rabbitmq # Use the environment variable or default to 'rabbitmq'
+    port: 5672 # Use the environment variable or default to 5672
+    username: guest
+    password: guest
+
+    exchange: product-exchange
+    queue: product-queue
+    routing-key: product-routing-key
+
+products:
+  pagination:
+    default-page-size: 10
+    max-page-size: 100
+    default-page: 0
+
 server:
   port: 8080
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: health
